--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <div class="Glottis">
                 <h1>Welcome</h1>
                 <h2>I am Pratish Kalika</h2>
-                <p>I am a Frontend Developer. </p>
+                <p>I am a Front-End Developer. </p>
                 </div>
 
             <button type="button">Hire Me </button>
-            
+                  
 
             <div class="buccal">
                 <p>© 2023 Pratish - All Rights Reserved</p>
