--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,20 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Portfolio.html</title>
+        <title>Index.html</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1 style="portfolio.h1">This is Heading</h1>
-    </body>
-</html>
+        <!--Nav Bar Section-->
+        <body class="abdomen">
+            <nav>
+                <h2 class="style">Pra<span>tish.</span></h2>
+                
+                <ul>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="Work Experience.html">Work Experience</a></li>
+                    <li><a href="Sitereprt.html">Site Report</a></li>
+
+                </ul>
+            </nav>
