--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Contact.html</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <h1>Message to Me.</h1>
-    <form class="cord">
-        <label for="fname">First Name</label><br>
-        <input type="text" placeholder="Enter First Name"><br>
-        <label for="fname">Last Name</label><br>
-        <input type="text" placeholder="Enter Last Name"><br>
-        <label for="Phone">Enter Your Phone Number</label><br>
-        <input type="tel" placeholder="Enter your Number"><br>
-        <label for="checkbox">Message to me</label><br>
-        <textarea name="Messageme" rows="10" cols="40"></textarea><br><br>
-    </form>
+    <head>
+        <title>Contact Page html</title>
+        <link rel="stylesheet" href="./style.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    </head>
+    <body>
+        <!--Nav Bar Section-->
+        <body class="prabesh">
+            <nav>
+                <h2 class="style">Pra<span>tish.</span></h2>
+                <ul>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="Work Experience.html">Work Experience</a></li>
+                    <li><a href="Sitereprt.html">Site Report</a></li>
+
+                </ul>
+            </nav>
+            <!--Nav Bar Section Ends-->
+
+
+            <!--Form Html Starts-->
+            <h2 class="heading">Contact Me!</h2>
+<form class="frog">
+    <label for="fname">First Name</label><br>
+    <input type="text" id="fname" placeholder="Enter Your First Name"><br><br>
+    <label for="lname">Last Name</label><br>
+    <input type="text" id="lname" placeholder="Enter Your last Name"><br><br>
+    <label for="Email">Email Address</label><br>
+    <input type="text" id="fname" placeholder="Enter Your Email Adress"><br><br>
+    <label for="Message">Your Message</label><br>
+    <textarea name="" id="" rows="10" cols="64" placeholder="Your Message"></textarea><br><br>
+    <input type="submit" value="Submit">
+</form>
+
+            <!--Form Html Ends-->
+
+
+    
 </body>
 </html>
