--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,17 @@
             </nav>
             <!--Nav Bar Section Ends-->
 
+            <!--Contact, Email, Address Section Starts-->
+           <div class="bladder">
+           
+
+           </div>
+            <!--Contact, Email, Address Section Ends-->
 
             <!--Form Html Starts-->
-            <h2 class="heading">Contact Me!</h2>
+           
 <form class="frog">
+    <h2 class="heading">Contact Me!</h2><br><br>
     <label for="fname">First Name</label><br>
     <input type="text" id="fname" placeholder="Enter Your First Name"><br><br>
     <label for="lname">Last Name</label><br>
